--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>New Tab</title>
 </head>
-<body>
+<body class="light">
   <div>
     <section id="clock"><h1></h1><div></div></section>
     <section id="mails"></section>
