add empty options panel

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <section id="clock"><h1></h1><div></div></section>
     <section id="mails"></section>
   </div>
+  <i id="options_button" class="icon-cog"></i>
   <section id="apps"></section>
+  <section id="options"></section>
   <script type="text/javascript" src="js/jquery-2.0.2.min.js"></script>
   <script type="text/javascript" src="js/prefixfree.min.js"></script>
   <script type="text/javascript" src="js/flipclock/flipclock.min.js"></script>
