--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
   <title>New Tab</title>
 </head>
 <body class="light">
+  <span id="actions">
+    <i id="options_btn" class="icon-cog"></i>
+    <a href="https://chrome.google.com/webstore" class="icon-store"></a>
+    <i id="default_home" class="icon-default"></i>
+  </span>
   <div>
     <section id="clock"><h1></h1><div></div></section>
     <section id="mails"></section>
   </div>
-  <i id="options_button" class="icon-cog"></i>
   <section id="apps"></section>
   <section id="options"></section>
   <script type="text/javascript" src="js/jquery-2.0.2.min.js"></script>
