added first options

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>New Tab</title>
 </head>
-<body class="light">
+<body>
   <span id="actions">
     <i id="options_btn" class="icon-cog"></i>
     <a href="https://chrome.google.com/webstore" class="icon-store"></a>
