Add Fonts and Themes

--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>New Tab</title>
 </head>
-<body>
-  <span id="actions">
-    <i id="options_btn" class="icon-cog"></i>
-    <a href="https://chrome.google.com/webstore" class="icon-store"></a>
-    <i id="default_home" class="icon-default"></i>
-  </span>
-  <div>
-    <section id="clock"><h1></h1><div></div></section>
-    <section id="mails"></section>
+<body class="light">
+  <div id="wrapper" class="">
+    <span id="actions">
+      <i id="options_btn" class="icon-cog"></i>
+      <a href="https://chrome.google.com/webstore" class="icon-store"></a>
+      <i id="default_home" class="icon-default"></i>
+    </span>
+    <div>
+      <section id="clock"><h1></h1><div></div></section>
+      <section id="mails"></section>
+    </div>
+    <section id="apps"></section>
+    <section id="options"></section>
   </div>
-  <section id="apps"></section>
-  <section id="options"></section>
   <script type="text/javascript" src="js/jquery-2.0.2.min.js"></script>
   <script type="text/javascript" src="js/prefixfree.min.js"></script>
   <script type="text/javascript" src="js/flipclock/flipclock.min.js"></script>
