--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <section id="clock"><h1></h1><div></div></section>
     <section id="mails"></section>
   </div>
+  <input type="file" id="file-input" webkitdirectory="" directory="" />
   <section id="apps"></section>
   <section id="options"></section>
   <script type="text/javascript" src="js/jquery-2.0.2.min.js"></script>
