--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>New Tab</title>
 </head>
-<body class="light">
-  <div id="wrapper" class="">
+<body>
+  <!-- <div id="wrapper" class=""> -->
     <span id="actions">
       <i id="options_btn" class="icon-cog"></i>
       <a href="https://chrome.google.com/webstore" class="icon-store"></a>
@@ -18,7 +18,7 @@
     </div>
     <section id="apps"></section>
     <section id="options"></section>
-  </div>
+  <!-- </div> -->
   <script type="text/javascript" src="js/jquery-2.0.2.min.js"></script>
   <script type="text/javascript" src="js/prefixfree.min.js"></script>
   <script type="text/javascript" src="js/flipclock/flipclock.min.js"></script>
