added loader for mail fetching

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </span>
   <div>
     <section id="clock"><h1></h1><div></div></section>
-    <section id="mails"></section>
+    <section id="mails"><i class="icon-load loader"></i></section>
   </div>
   <section id="apps"></section>
   <section id="options"></section>
