added loading animation for every label change

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <a href="https://chrome.google.com/webstore" class="icon-store"></a>
     <i id="default_home" class="icon-default"></i>
   </span>
-  <div>
+  <div class="loading">
     <section id="clock"><h1></h1><div></div></section>
-    <section id="mails"><i class="icon-load loader"></i></section>
+    <i class="icon-load loader"></i>
+    <section id="mails"></section>
   </div>
   <section id="apps"></section>
   <section id="options"></section>
