integrate moment.js, specify max length for unread mail status, changed label input to form

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <script type="text/javascript" src="js/flipclock/flipclock.min.js"></script>
   <script type="text/javascript" src="js/handlebars.runtime.js"></script>
   <script type="text/javascript" src="js/jquery.bxslider.min.js"></script>
+  <script type="text/javascript" src="js/moment.min.js"></script>
   <script type="text/javascript" src="js/template.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
 </body>
