add check if user is signed in to google

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <a href="https://chrome.google.com/webstore" class="icon-store"></a>
     <i id="default_home" class="icon-default"></i>
   </span>
-  <div class="loading">
+  <div>
     <section id="clock"><h1></h1><div></div></section>
     <i class="icon-load loader"></i>
     <section id="mails"></section>
