moved options page to be the flip page of the clock

--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
     <i id="default_home" class="icon-default"></i>
   </span>
   <div>
-    <section id="clock"><h1></h1><div></div></section>
+    <section id="clock-options">
+      <h1></h1>
+      <div></div>
+      <section id="options"></section>
+    </section>
     <i class="icon-load loader"></i>
     <section id="mails"></section>
   </div>
   <section id="apps"></section>
-  <section id="options"></section>
   <script type="text/javascript" src="js/jquery-2.0.2.min.js"></script>
   <script type="text/javascript" src="js/flipclock/flipclock.min.js"></script>
   <script type="text/javascript" src="js/handlebars.runtime.js"></script>
