added credits and contributors

--- a/index.html
+++ b/index.html
@@ -10,6 +10,30 @@
     <i id="options_btn" class="icon-cog"></i>
     <a href="https://chrome.google.com/webstore" class="icon-store"></a>
     <i id="default_home" class="icon-default"></i>
+    <div class="icon-info">
+      <section>
+        <ul>
+          <li>FlipClock.js<a href="http://flipclockjs.com/">Homepage</a></li>
+          <li>Moment.js<a href="http://momentjs.com/">Homepage</a></li>
+          <li>bxSlider<a href="http://bxslider.com/">Homepage</a></li>
+          <li>Google Webfont Lato<a href="http://www.google.com/fonts/specimen/Lato">Font Description</a></li>
+          <li>jQuery<a href="http://jquery.com/">Homepage</a></li>
+        </ul>
+        <!-- <img src="/icon/icon128.png" alt="extension icon" /> -->
+        <div class="contributors">
+          <a href="https://github.com/mupat">
+            <span>Hacker</span>
+            <img src="https://secure.gravatar.com/avatar/71f4bc8f66d8e0f71a42d4d36059de8d?d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" alt="avatar for Mupat">
+            <strong>Mupat</strong>
+          </a>
+          <a href="https://github.com/mac-cypher">
+            <img src="https://secure.gravatar.com/avatar/f75332e05bb1198b9d0da05768897bb7?d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" alt="avatar for mac-cypher">
+            <strong>mac-cypher</strong>
+            <span>Designer</span>
+          </a>
+        </div>
+      </section>
+    </div>
   </span>
   <div>
     <section id="clock-options">
