add yantre icon again

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <i id="default_home" class="icon-default"></i>
     <div class="icon-info">
       <section>
+        <img src="/icon/icon128.png" alt="extension icon" />
         <ul>
           <li>FlipClock.js<a href="http://flipclockjs.com/">Homepage</a></li>
           <li>Moment.js<a href="http://momentjs.com/">Homepage</a></li>
@@ -19,7 +20,6 @@
           <li>Google Webfont Lato<a href="http://www.google.com/fonts/specimen/Lato">Font Description</a></li>
           <li>jQuery<a href="http://jquery.com/">Homepage</a></li>
         </ul>
-        <!-- <img src="/icon/icon128.png" alt="extension icon" /> -->
         <div class="contributors">
           <a href="https://github.com/mupat">
             <span>Hacker</span>
